source/common/objects/c52_AuthenticationHistory__c.object
<CustomObject>
    <description>Authentication history of users and the app that was being used and the authentication provider used.</description>
    <fields>
        <fullName>Application__c</fullName>
        <description>The application that was used when authenticating</description>
        <label>Application</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mobile</fullName>
                    <default>true</default>
                    <label>Mobile</label>
                </value>
                <value>
                    <fullName>Website</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AuthenticatedAt__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <description>the date time the user authenticated to the system</description>
        <label>AuthenticatedAt</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AuthenticationProvider__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The authentication provider that was used to authenticate</description>
        <label>Authentication Provider</label>
        <referenceTo>c52_AuthenticationProvider__c</referenceTo>
        <relationshipLabel>Authentication History</relationshipLabel>
        <relationshipName>Authentication_History</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Contact record of the user who preformed the authentication</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Authentication History</relationshipLabel>
        <relationshipName>Authentication_History</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Device__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The related device used to authenticate</description>
        <label>Device</label>
        <referenceTo>c52_Device__c</referenceTo>
        <relationshipLabel>Authentication History</relationshipLabel>
        <relationshipName>Authentication_History</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Authentication History</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AH-{0000000000}</displayFormat>
        <label>Authentication History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Authentication History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>